test/tests/packages/lets_pipeline/pipeline.txt
error: package binding `pipelinepkg::$p` is not a constant
 --> <packages/pipelinepkg/lets.tql>:1:10
  |
1 | let $p = { from {x: 1} }
  |          ^^^^^^^^^^^^^^^ 
  |
  = note: package `let` bindings must be deterministic
